--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/stack": "^5.2.7",
     "color": "^3.1.2",
     "expo": "~36.0.0",
+    "expo-camera": "~8.0.0",
+    "expo-media-library": "~8.0.0",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.6.1",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.4.0",
@@ -28,19 +31,20 @@
     "react-native-screens": "2.4.0",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "ts-loader": "^7.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@callstack/eslint-config": "^9.1.0",
     "@types/color": "^3.0.1",
-    "@types/react": "~16.9.26",
-    "@types/react-native": "~0.61.23",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@types/react": "^16.9.35",
+    "@types/react-native": "^0.62.13",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
     "babel-preset-expo": "~8.1.0",
     "eslint": "^6.8.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.9.5"
   },
   "private": true
 }
