--- a/package.json
+++ b/package.json
@@ -14,27 +14,37 @@
     "@react-navigation/material-bottom-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "axios": "^0.19.2",
     "color": "^3.1.2",
     "expo": "^38.0.0",
     "expo-camera": "~8.3.1",
+    "expo-facebook": "~8.2.1",
     "expo-file-system": "~9.0.1",
     "expo-gl": "~8.3.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-mail-composer": "~8.2.1",
     "expo-media-library": "~8.2.1",
+    "expo-permissions": "~9.0.1",
     "expo-pixi": "^1.2.0",
+    "lottie-react-native": "~2.6.1",
     "moment": "^2.27.0",
+    "querystring": "^0.2.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^3.10.1",
+    "react-native-picker-select": "^7.0.0",
+    "react-native-public-ip": "^1.0.2",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
