Inclusao do compartilhemtno por email e limpeza

--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "expo-media-library": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-pixi": "^1.2.0",
+    "expo-updates": "~0.2.8",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.27.0",
     "querystring": "^0.2.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.0.4",
@@ -44,6 +45,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7"
   },
