--- a/app.json
+++ b/app.json
@@ -28,19 +28,20 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.procyon.fdc",
+      "bundleIdentifier": "com.procyon.checkfacil",
       "buildNumber": "1.0.0"
     },
     "android": {
-      "permissions": ["CAMERA"],
-      "package": "com.procyon.fdc",
-      "versionCode": 1,
-      "googleServicesFile": "./google-services.json",
-      "config": {
-        "googleMaps": {
-          "apiKey": "AIzaSyBqitr0K9UhX_Se7tKwdcaZoPXE-eViE4Q"
-        }
-      }
-    }
+      "permissions": [
+        "CAMERA",
+        "CAMERA_ROLL",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "MANAGE_EXTERNAL_STORAGE"
+      ],
+      "package": "com.procyon.checkfacil",
+      "versionCode": 1
+    },
+    "description": ""
   }
 }
