--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "license" : "SEE LICENSE IN LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "homepage": "https://fichadocarro.com.br",
   "scripts": {
     "start": "expo start",
@@ -23,11 +23,13 @@
     "expo-facebook": "~8.2.1",
     "expo-file-system": "~9.0.1",
     "expo-gl": "~8.3.1",
+    "expo-image-manipulator": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
     "expo-mail-composer": "~8.2.1",
     "expo-media-library": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-pixi": "^1.2.0",
+    "expo-task-manager": "~8.3.0",
     "expo-updates": "~0.2.8",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.27.0",
