--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
+    "userInterfaceStyle": "light",
     "icon": "./src/assets/icon.png",
     "splash": {
       "image": "./src/assets/splash.png",
