--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "color": "^3.1.2",
     "expo": "^38.0.0",
     "expo-camera": "~8.3.1",
+    "expo-device": "~2.2.1",
     "expo-facebook": "~8.2.1",
     "expo-file-system": "~9.0.1",
     "expo-gl": "~8.3.1",
